--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,11 @@
   --logo-color: #000;
   --contact-color: rgba(255, 255, 255, 0.6);
   --icon-color: #afb1b8;
+  --backdrop-color: rgba(0, 0, 0, 0.1);
+  --description-bg: rgba(33, 150, 243, 0.9);
+  --service-bg: rgba(47, 48, 58, 0.8);
+  --footer-icon-bg: rgba(255, 255, 255, 0.1);
+  --bg-gradient: rgba(47, 48, 58, 0.4);
 }
 
 body {
@@ -63,6 +68,7 @@ p {
 }
 
 .header-logo {
+  flex-grow: 1;
   font-family: "Raleway", sans-serif;
   color: var(--logo-color);
   text-decoration: none;
@@ -70,10 +76,10 @@ p {
   font-size: 26px;
   line-height: 1.2;
   letter-spacing: 0.03em;
-  flex-grow: 1;
 }
+
 .logo-blue {
-  color: #2196f3;
+  color: var(--active-color);
 }
 
 .nav-list {
@@ -92,20 +98,20 @@ p {
   font-size: 14px;
   line-height: 1.17;
   letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-links:hover,
 .nav-links:focus {
   color: var(--active-color);
   cursor: pointer;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-list {
-  text-align: right;
-  flex-grow: 4;
   display: flex;
+  text-align: right;
   justify-content: flex-end;
+  flex-grow: 4;
 }
 
 .contact-list li:not(:last-child) {
@@ -113,6 +119,8 @@ p {
 }
 
 .header-contact {
+  display: flex;
+  align-items: center;
   text-decoration: none;
   color: var(--p-color);
   font-weight: 500;
@@ -120,8 +128,8 @@ p {
   line-height: 1.17;
   letter-spacing: 0.02em;
   fill: var(--p-color);
-  display: flex;
-  align-items: center;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-icon {
@@ -132,8 +140,6 @@ p {
 .header-contact:focus {
   fill: var(--active-color);
   color: var(--active-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .active-page {
@@ -142,24 +148,54 @@ p {
 }
 
 .active-page::after {
+  position: absolute;
+  top: 46px;
   display: block;
   content: "";
   width: 100%;
   height: 4px;
   background-color: var(--active-color);
   border-radius: 2px;
-  position: absolute;
-  top: 46px;
+}
+
+.newsletter-input {
+  width: 358px;
+  height: 50px;
+  padding: 0;
+  color: var(--contact-color);
+  background-color: var(--bg-color);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+}
+
+.newsletter-button {
+  display: inline-block;
+  background-color: var(--active-color);
+  color: var(--text-color);
+  font: inherit;
+  height: 50px;
+  width: 200px;
+  font-weight: 700;
+  padding: 0;
+  margin: 0 auto;
+  border-radius: 4px;
+  border: 0;
+  cursor: pointer;
+}
+
+.newsletter-icon {
+  padding: ;
+  fill: var(--text-color);
 }
 
 /* header end */
 
 /* footer start */
 .footer {
-  background-color: var(--bg-color);
   color: var(--text-color);
   font-size: 14px;
   line-height: 1.71;
+  background-color: var(--bg-color);
 }
 
 .footer-items {
@@ -169,41 +205,41 @@ p {
 }
 
 .footer-items h5 {
+  margin-bottom: 20px;
   text-transform: uppercase;
   font-weight: 700;
   font-size: 14px;
-  margin-bottom: 20px;
 }
 
 .footer-logo {
   display: block;
+  padding-top: 60px;
   text-decoration: none;
   color: var(--text-color);
   font-family: "Raleway", sans-serif;
   font-size: 26px;
   line-height: 1.2;
   letter-spacing: 0.03em;
-  padding-top: 60px;
 }
 
 .footer address {
-  font-style: normal;
-  letter-spacing: 0.03em;
   padding-top: 20px;
   padding-bottom: 60px;
+  font-style: normal;
+  letter-spacing: 0.03em;
 }
 
 .footer-link {
-  text-decoration: none;
-  color: var(--contact-color);
   display: block;
   padding-top: 9px;
+  color: var(--contact-color);
+  text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-link:hover,
 .footer-link:focus {
   color: var(--active-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-icon {
@@ -214,40 +250,38 @@ p {
 .footer-icon li {
   display: flex;
   gap: 10px;
-  fill: var(--card-bg);
   padding: 12px;
-  border: 0px solid rgba(255, 255, 255, 0.1);
-  background-color: rgba(255, 255, 255, 0.1);
+  fill: var(--text-color);
+  background-color: var(--footer-icon-bg);
   border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-icon li:hover,
 .footer-icon li:active {
-  border: 0px solid var(--active-color);
-  border-radius: 50%;
-  background-color: #2196f3;
-  fill: var(--card-bg);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: var(--active-color);
 }
 
 /* footer end */
 
 /* index main start */
 .page-title {
+  height: 600px;
   background-color: var(--bg-color);
   background-image: linear-gradient(
       to top,
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
+      var(--bg-gradient),
+      var(--bg-gradient)
     ),
     url(../images/bgimg.jpg);
-
   background-repeat: no-repeat;
   background-position: center;
-  height: 600px;
 }
 
 .title {
+  max-width: 700px;
+  margin: 0 auto 30px;
+  padding-top: 200px;
   color: var(--text-color);
   text-align: center;
   font-weight: 900;
@@ -255,30 +289,27 @@ p {
   line-height: 1.36;
   text-transform: uppercase;
   letter-spacing: 0.06em;
-  max-width: 700px;
-  margin: 0 auto 30px;
-  padding-top: 200px;
 }
 
 .main-button {
   display: block;
-  background-color: var(--active-color);
-  color: var(--text-color);
-  font: inherit;
   height: 50px;
   width: 200px;
-  font-weight: 700;
-  cursor: pointer;
   margin: 0 auto;
+  font: inherit;
+  color: var(--text-color);
+  font-weight: 700;
+  background-color: var(--active-color);
   border-radius: 4px;
   border: 0;
+  cursor: pointer;
 }
 
 .advantages-section h3 {
+  margin-bottom: 10px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
-  margin-bottom: 10px;
 }
 
 .advantages-section p {
@@ -297,22 +328,21 @@ p {
 }
 
 .advantages-icon {
-  background-color: var(--button-color);
   margin-bottom: 30px;
   padding: 25px 100px;
+  background-color: var(--button-color);
 }
 
 .service-section h2 {
+  margin-bottom: 50px;
   text-align: center;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
-  margin-bottom: 50px;
 }
 
 .service-section ul {
   display: flex;
-  margin: 0;
   gap: 30px;
 }
 
@@ -322,22 +352,21 @@ p {
 }
 
 .service-section li {
-  flex-basis: calc((100%-60px) / 3);
   position: relative;
+  flex-basis: calc((100%-60px) / 3);
 }
 
 .service-section p {
   position: absolute;
-  background-color: rgba(47, 48, 58, 0.8);
-  color: var(--card-bg);
   bottom: 0;
-  left: 50%;
-  width: 100%;
-  transform: translate(-50%);
-  text-transform: uppercase;
-  font-size: 14px;
+  left: 0;
+  width: 370px;
   padding: 27px 0;
+  color: var(--card-bg);
+  text-transform: uppercase;
   text-align: center;
+  font-size: 14px;
+  background-color: var(--service-bg);
 }
 
 .team-section {
@@ -350,11 +379,11 @@ p {
 }
 
 .team-section h2 {
+  margin-bottom: 50px;
   text-align: center;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
-  margin-bottom: 50px;
 }
 
 .team-members {
@@ -364,8 +393,8 @@ p {
 
 .team-section figure {
   margin: 0;
-  background-color: var(--card-bg);
   text-align: center;
+  background-color: var(--card-bg);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -376,10 +405,10 @@ p {
 }
 
 .team-section h4 {
+  padding-bottom: 10px;
   font-weight: 500;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  padding-bottom: 10px;
 }
 
 .team-section p {
@@ -396,26 +425,26 @@ p {
 .social-icon li {
   height: 20px;
   width: 20px;
-  fill: var(--icon-color);
   padding: 12px;
-}
-
-.social-icon li:hover,
-.social-icon li:active {
-  border: 0px solid var(--active-color);
+  fill: var(--icon-color);
   border-radius: 50%;
-  background-color: #2196f3;
-  fill: var(--card-bg);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.social-icon li:hover,
+.social-icon li:active {
+  fill: var(--card-bg);
+  border-radius: 50%;
+  background-color: var(--active-color);
+}
+
 .client-section h2 {
+  margin-bottom: 50px;
   text-align: center;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
-  margin-bottom: 50px;
 }
 
 .client-section ul {
@@ -424,76 +453,72 @@ p {
 }
 
 .client-icon {
-  border: 1px solid var(--icon-color);
-  border-radius: 4px;
   height: 60px;
   width: 106px;
   padding: 16px 32px;
   fill: var(--icon-color);
-}
-
-.client-icon:hover,
-.client-icon:focus {
-  border-color: var(--active-color);
-  fill: var(--active-color);
-  cursor: pointer;
+  border: 1px solid var(--icon-color);
+  border-radius: 4px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.client-icon:hover,
+.client-icon:focus {
+  fill: var(--active-color);
+  border-color: var(--active-color);
+  cursor: pointer;
+}
+
 .modal {
-  height: 581px;
-  width: 528px;
-  background-color: var(--card-bg);
-  display: block;
-  margin: auto;
   position: fixed;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+  display: flex;
+  margin: auto;
+  height: 581px;
+  width: 528px;
+  background-color: var(--card-bg);
   border-radius: 4px;
 }
 
 .backdrop {
-  background-color: rgba(0, 0, 0, 0.1);
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  display: block;
-  margin: auto;
   position: fixed;
   left: 0;
   top: 0;
+  display: block;
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  background-color: var(--backdrop-color);
   visibility: visible;
   opacity: 1;
   transform: scale(100%);
   transition-property: visibility, opacity, transform;
-  transition-duration: 100ms;
-  transition-timing-function: ease;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-hidden {
   pointer-events: none;
   visibility: hidden;
   opacity: 0;
-  transform: scale(50%);
-  transition-property: visibility, opacity, transform;
-  transition-duration: 100ms;
-  transition-timing-function: ease;
+  transform: scale(150%);
 }
 
 .modal-close {
-  background-color: var(--card-bg);
-  border-radius: 50%;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  padding: 0px;
   position: fixed;
   top: 8px;
   right: 8px;
-  cursor: pointer;
   width: 28px;
   height: 28px;
+  padding: 0px;
   font-size: 13px;
+  background-color: var(--card-bg);
+  border-radius: 50%;
+  border: 1px solid var(--backdrop-color);
+  cursor: pointer;
 }
 
 /* index end */
@@ -507,15 +532,18 @@ p {
 }
 
 .filters button {
-  background-color: var(--button-color);
+  padding: 6px 22px;
   font-size: 16px;
   font-family: inherit;
   font-weight: 500;
   line-height: 1.62;
+  background-color: var(--button-color);
   cursor: pointer;
   border-radius: 4px;
   border: 0;
-  padding: 6px 22px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filters li:not(:last-child) {
@@ -524,35 +552,32 @@ p {
 
 .filters button:hover,
 .filters button:focus {
-  background-color: var(--active-color);
   color: var(--text-color);
+  background-color: var(--active-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   cursor: pointer;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .projects-section figure {
-  margin: 0;
   position: relative;
+  margin: 0;
   overflow: hidden;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .projects-section figure:hover,
 .projects-section figure:active {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .projects-section figcaption {
+  position: relative;
+  z-index: 5;
   padding: 20px 24px;
   border-left: 1px solid var(--pic-border);
   border-right: 1px solid var(--pic-border);
   border-bottom: 1px solid var(--pic-border);
-  z-index: 5;
-  position: relative;
   background-color: var(--card-bg);
 }
 
@@ -585,18 +610,18 @@ p {
 
 .project-description {
   position: absolute;
+  z-index: 3;
   height: 100%;
-  background-color: rgba(33, 150, 243, 0.9);
-  color: #fff;
+  padding: 49px 45px 49px 24px;
+  color: var(--text-color);
   line-height: 1.56;
   letter-spacing: 0.03em;
   font-size: 18px;
-  padding: 49px 45px 49px 24px;
+  background-color: var(--description-bg);
   transform: translateY(0);
   transition-property: transform;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  z-index: 3;
 }
 
 .projects-section figure:hover .project-description {
