--- a/css/styles.css
+++ b/css/styles.css
@@ -236,8 +236,10 @@ p {
 }
 
 .newsletter-input {
+  box-sizing: border-box;
   display: inline-block;
-  width: 323px;
+  width: 358px;
+  height: 50px;
   padding: 15px 16px;
   font-size: 16px;
   color: var(--contact-color);
@@ -618,18 +620,20 @@ p {
 }
 
 .custom-input {
-  width: 11px;
-  height: 12px;
+  box-sizing: border-box;
+  width: 16px;
+  height: 15px;
+  margin-right: 4px;
   border: 2px solid var(--main-color);
   border-radius: 2px;
   cursor: pointer;
 }
 
 .custom-input:checked {
-  width: 15px;
-  height: 16px;
+  width: 16px;
+  height: 15px;
   border: none;
-  background-image: url(../images/icons.svg#icon-check);
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='15' fill='none'%3E%3Crect width='16' height='15' fill='%232196F3' rx='2'/%3E%3Cpath fill='%23fff' stroke='%23fff' stroke-width='.2' d='m3.957 7.752-.069-.066-.069.065-.888.842-.076.072.076.073 3.496 3.334.069.066.069-.066 7.504-7.158.076-.073-.076-.072-.882-.841-.069-.066-.069.066-6.553 6.246-2.539-2.422Z'/%3E%3C/svg%3E");
 }
 
 .hidden {
